--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -10,7 +10,7 @@ endif()
 
 # About this project
 # ------------------------------------------------------------------------------
-project(MEM-finder)
+project(PFP-data-structures)
 SET(VERSION_MAJOR "0")
 SET(VERSION_MINOR "1")
 SET(VERSION_PATCH "0")
