--- a/.gitmodules
+++ b/.gitmodules
@@ -1,6 +1,6 @@
-[submodule "thirdparty/Big-BWT"]
-	path = thirdparty/Big-BWT
-	url = git@github.com:alshai/Big-BWT.git
 [submodule "thirdparty/sdsl-lite"]
 	path = thirdparty/sdsl-lite
 	url = git@github.com:simongog/sdsl-lite.git
+[submodule "thirdparty/Big-BWT"]
+	path = thirdparty/Big-BWT
+	url = git@github.com:maxrossi91/Big-BWT.git
