--- a/test/src/CMakeLists.txt
+++ b/test/src/CMakeLists.txt
@@ -1,2 +1,2 @@
 add_executable(pfp_ds_test pfp_ds_test.cpp)
-target_link_libraries(pfp_ds_test common gsacak sdsl)
+target_link_libraries(pfp_ds_test common gsacak sdsl malloc_count)
