Included sdsl baseline with CSA and LCP

--- a/test/src/CMakeLists.txt
+++ b/test/src/CMakeLists.txt
@@ -3,3 +3,6 @@ target_link_libraries(pfp_ds_test common gsacak sdsl malloc_count)
 
 add_executable(sdsl_baseline_cst sdsl_baseline_cst.cpp)
 target_link_libraries(sdsl_baseline_cst common sdsl divsufsort divsufsort64 malloc_count)
+
+add_executable(sdsl_baseline_csa sdsl_baseline_csa.cpp)
+target_link_libraries(sdsl_baseline_csa common sdsl divsufsort divsufsort64 malloc_count)
