Reorganization of classes in header files and Update of CMake

--- a/include/CMakeLists.txt
+++ b/include/CMakeLists.txt
@@ -1,2 +1,5 @@
 add_subdirectory(common)
 target_include_directories(common PUBLIC common)
+
+add_subdirectory(pfp)
+target_include_directories(pfp PUBLIC pfp)
