--- a/include/pfp/CMakeLists.txt
+++ b/include/pfp/CMakeLists.txt
@@ -1,8 +1,8 @@
-set(PFP_SOURCES dictionary.hpp,
-                parse.hpp,
-                wt.hpp,
-                lce_support.hpp,
-                sa_support.hpp,
+set(PFP_SOURCES dictionary.hpp
+                parse.hpp
+                wt.hpp
+                lce_support.hpp
+                sa_support.hpp
                 pfp.hpp)
 
 add_library(pfp OBJECT ${PFP_SOURCES})
