--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -47,3 +47,5 @@ endif()
 
 add_subdirectory(include)
 add_subdirectory(test)
+
+configure_file(${PROJECT_SOURCE_DIR}/pipeline/pfp_ds ${PROJECT_BINARY_DIR}/pfp_ds)
