Included lc-lcp benchmarks

--- a/test/src/CMakeLists.txt
+++ b/test/src/CMakeLists.txt
@@ -15,3 +15,6 @@ target_link_libraries(lce_test common pfp gsacak sdsl divsufsort divsufsort64 ma
 
 add_executable(sa_test sa_test.cpp)
 target_link_libraries(sa_test common pfp gsacak sdsl divsufsort divsufsort64 malloc_count gtest_main pthread)
+
+add_executable(lce_benchmark lce_benchmark.cpp)
+target_link_libraries(lce_benchmark common pfp gsacak sdsl divsufsort divsufsort64 malloc_count benchmark pthread)
