--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -20,6 +20,7 @@ SET(VERSION "${VERSION_MAJOR}.${VERSION_MINOR}.${VERSION_PATCH}")
 # ------------------------------------------------------------------------------
 set(CMAKE_INSTALL_PREFIX ${CMAKE_BINARY_DIR}/install)
 
+
 find_package(Git)
 if(GIT_FOUND)
     message("git found: ${GIT_EXECUTABLE}")
@@ -27,10 +28,28 @@ else()
     message(WARNING "git not found. Cloning of submodules will not work.")
 endif()
 
+
+include(FetchContent)
+set(CMAKE_INSTALL_INCLUDEDIR "include") # This is an hack because include(GUIInstallDirs) doesn't work
 # Configure thirdparty
 # ------------------------------------------------------------------------------
-add_subdirectory(thirdparty)
 
+
+
+FetchContent_Declare(
+  benchmark
+  GIT_REPOSITORY https://github.com/google/benchmark.git
+  GIT_TAG        v1.5.0
+  )
+  
+FetchContent_GetProperties(benchmark)
+if(NOT benchmark_POPULATED)
+FetchContent_Populate(benchmark)
+set(BENCHMARK_ENABLE_TESTING OFF CACHE BOOL "Enable testing of the benchmark library." FORCE)
+add_subdirectory(${benchmark_SOURCE_DIR} ${benchmark_BINARY_DIR} EXCLUDE_FROM_ALL)
+endif()
+
+add_subdirectory(thirdparty)
 
 # Configure the compiler with the appropriate flags
 # ------------------------------------------------------------------------------
