Change in CMakeLists.txt in include/pfp

--- a/include/pfp/CMakeLists.txt
+++ b/include/pfp/CMakeLists.txt
@@ -6,4 +6,4 @@ set(PFP_SOURCES dictionary.hpp
                 pfp.hpp)
 
 add_library(pfp OBJECT ${PFP_SOURCES})
-target_link_libraries(pfp common)
+target_link_libraries(pfp common sdsl divsufsort divsufsort64)
