Add strdup function to overshadow std. lib one

--- a/include/common/CMakeLists.txt
+++ b/include/common/CMakeLists.txt
@@ -3,3 +3,7 @@ set(COMMON_SOURCES common.hpp)
 
 add_library(common OBJECT ${COMMON_SOURCES})
 target_link_libraries(common)
+
+set(STRDUP_SOURCES strdup.hpp)
+add_library(strdup OBJECT ${STRDUP_SOURCES})
+target_link_libraries(strdup)
